# IoT_HomeSensor_Dashboard

./: .gitignore  .gitmodules  LICENSE.txt  README.md  homesensors.fcgi  index.py  passenger_wsgi.py  plotBattery.py  plotTemp.py  populate_test_db.py  pyproject.toml  requirements.txt  schema.sql
FridgeAPI/: config.ini_sample  fridgeapi.py
FridgeAPI/static/: index.html
FridgeAPI/static/js/: highcharts_theme.js
src/iot_homesensor_dashboard/: __about__.py  __init__.py  fridgeapi.py
