[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "iot-homesensor-dashboard"
dynamic = ["version"]
description = 'Web app to show logged home sensor data'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Alex Precosky", email = "precosky@mac.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/unknown/iot-homesensor-dashboard#readme"
Issues = "https://github.com/unknown/iot-homesensor-dashboard/issues"
Source = "https://github.com/unknown/iot-homesensor-dashboard"

[tool.hatch.version]
path = "src/iot_homesensor_dashboard/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "configparser",
  "coverage[toml]>=6.5",
  "gunicorn",
  "pytest",
  "python-dateutil",
  "flask",
  "PyMySQL",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]
app = "python src/iot_homesensor_dashboard/fridgeapi.py"
serve = "gunicorn iot_homesensor_dashboard.fridgeapi:app"

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/iot_homesensor_dashboard tests}"

[tool.coverage.run]
source_pkgs = ["iot_homesensor_dashboard", "tests"]
branch = true
parallel = true
omit = [
  "src/iot_homesensor_dashboard/__about__.py",
]

[tool.coverage.paths]
iot_homesensor_dashboard = ["src/iot_homesensor_dashboard", "*/iot-homesensor-dashboard/src/iot_homesensor_dashboard"]
tests = ["tests", "*/iot-homesensor-dashboard/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
